--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"@youi/react-native-youi": "5.4.1",
-		"react": "^16.6.3",
-		"react-native": "0.55.3",
+		"@youi/react-native-youi": "5.7.0",
+		"metro-react-native-babel-preset": "^0.45.0",
+		"react": "16.6.3",
+		"react-native": "0.58.6",
 		"react-navigation": "^2.12.1",
 		"react-redux": "^5.0.7",
 		"redux": "^4.0.0",
 		"redux-debounced": "^0.5.0",
 		"redux-promise-middleware": "^6.1.0",
 		"redux-thunk": "^2.3.0",
-		"youtube-stream-url": "^1.0.1"
+		"youtube-stream-url": "^1.0.1",
+		"prop-types": "^15.6.1"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.0.0",
+		"@babel/core": "7.0.0",
 		"@babel/preset-env": "^7.0.0",
 		"@babel/preset-react": "^7.0.0",
 		"@babel/register": "^7.0.0",
@@ -39,11 +41,9 @@
 		"@types/redux-promise-middleware": "^0.0.11",
 		"@typescript-eslint/eslint-plugin": "^1.9.0",
 		"@typescript-eslint/parser": "^1.9.0",
-		"babel-jest": "^23.6.0",
 		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-expo": "4.0.0",
 		"babel-preset-react": "^6.24.1",
-		"babel-preset-react-native": "4.0.0",
 		"eslint": "^5.16.0",
 		"eslint-config-prettier": "^4.3.0",
 		"eslint-plugin-babel": "^5.2.1",
@@ -51,18 +51,18 @@
 		"eslint-plugin-jest": "^22.3.0",
 		"eslint-plugin-prettier": "^3.1.0",
 		"eslint-plugin-react": "^7.11.1",
-		"jest": "^23.6.0",
+		"jest": "^23.4.1",
 		"jest-fetch-mock": "^2.1.2",
 		"prettier": "^1.17.1",
 		"react-native-typescript-transformer": "^1.2.12",
-		"react-test-renderer": "^16.4.1",
+		"react-test-renderer": "^16.6.3",
 		"ts-jest": "^22.4.4",
 		"typescript": "^3.5.1"
 	},
 	"resolutions": {
-    "axios": "^0.19.0",
-    "lodash-es": "^4.17.14",
-    "lodash": "^4.17.13",
-    "mem": "4.0.0"
+		"axios": "^0.19.0",
+		"lodash-es": "^4.17.14",
+		"lodash": "^4.17.13",
+		"mem": "4.0.0"
 	}
 }
